--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ svd-encoder = "0.14.3"
 svd-rs = { version = "0.14.2", features = ["serde"] }
 serde_yaml = "0.8.21"
 md5 = "0.7.0"
+clap = { version = "4.4.7", features = ["derive"] }
